2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: added
	  null check.

2010-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml: Show the .NET naming
	  policies options panel only for .NET projects.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionWindowManager.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionContextEventArgs.cs:
	  Implemented 'Bug 429265 - #region reindentation does not
	  work with autocompletion'.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	  Implemented 'Bug 580660 - Feature request: Make popup-lists
	  "continuous"'.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CodeFormattingPanel.cs:
	  Added missing getstring call.

2010-02-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs:
	  Use the new IconId type.

	* MonoDevelop.Projects.Gui.Dialogs/ProjectFileSelectorDialog.cs:
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/NamespaceSynchronisationPanel.cs:
	  Track api changes.

2010-02-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	  completion window now remembers the operation mode.

2010-02-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWidget.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Categories are now sorted.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj: ActiveLanguageCondition has